--- a/amplifyapp/public/index.html
+++ b/amplifyapp/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>x86 to Graviton Instance Mapping </title>
+    <title>x86 to Graviton Instance Map</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
